# convus_references

./: .editorconfig  .tool-versions  README.md  pyproject.toml  topics.csv
citation_recorder/: __init__.py  recorder.py  requester.py
citation_recorder/recorder/: __init__.py
citation_recorder/tests/: test_recorder.py
citations/: README.md
requester/: __init__.py
tests/: test_recorder.py  test_requester.py
topics/: README.md
