[tool.poetry]
name = "citation_recorder"
version = "0.1.0"
description = ""
authors = ["Seth Herr"]
readme = "README.md"
packages = [{include = "citation_recorder"}]

[tool.poetry.dependencies]
python = "^3.11"
yq = "^3.2.1"
pyyaml = "^6.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-watch = "^4.2.0"
betamax = "^0.8.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
